--- a/Backend/package.json
+++ b/Backend/package.json
@@ -38,6 +38,7 @@
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "helmet": "^8.1.0",
+    "nanoid": "^5.1.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
